# exp-pnid-langhrap

./: .env  .env copy  .gitignore  graph_vis.ipynb  langgraph.json  poetry_pip_freeze.txt  pyproject.toml  readme.md  requirements.txt
.history/: agent_p_and_id_20241213144811.py  agent_p_and_id_20241215031049.py  readme_20241213144824.md  readme_20241213144830.md  readme_20241213144834.md  readme_20241213144847.md  readme_20241213144858.md  readme_20241213144902.md  readme_20241213144908.md  readme_20241213144916.md  readme_20241213144917.md  readme_20241213144921.md  readme_20241213144924.md  readme_20241213144925.md  readme_20241213144953.md  readme_20241213144956.md  readme_20241213145020.md  readme_20241213145025.md  readme_20241213145057.md  readme_20241213145101.md  readme_20241213145106.md  readme_20241213145107.md  readme_20241213145110.md  readme_20241213145147.md  readme_20241213145149.md  readme_20241213145152.md  readme_20241213145206.md  readme_20241213145211.md  readme_20241213145213.md  readme_20241213145219.md  readme_20241213145222.md  readme_20241213145224.md  readme_20241213145243.md  readme_20241213145248.md  readme_20241213145252.md  readme_20241213145255.md  readme_20241213145257.md  readme_20241213145302.md  readme_20241213145304.md  readme_20241213145306.md  (+15 more)
2/: 2_aggregated_detections.json  2_detected_lines.json  2_detected_symbols.json  2_detected_texts.json  2_graph_network.json  processed_p&ID_document.json
2/.history/: 2_graph_network_20241206083549.json  (+1 more)
src/: agent.py  langgraph_pid_final.py  poetry_pip_freeze.txt
src/utils/: parsing.py  (+7 more)
(+4 files in other folders)
